--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,21 +13,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:wght@100;200;300;400;500;600;700&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/a74a08100a.js" crossorigin="anonymous"></script>
-    
+
     <!-- Style -->
     <link rel="stylesheet" href="/sources/style/base.css">
     <link rel="stylesheet" href="/sources/style/main.css">
-    
+
 </head>
+
 <body>
-    <nav class="app-header">
+    <div class="wrapper">
+        <nav class="app-header">
 
-    </nav>
-    <div class="app-main">
+        </nav>
+        <div class="app-main">
 
+        </div>
+        <footer class="app-footer">
+
+        </footer>
     </div>
-    <footer class="app-footer">
 
-    </footer>
 </body>
+
 </html>
