Add recent items

--- a/index.html
+++ b/index.html
@@ -92,101 +92,212 @@
                     </ul>
                 </div>
             </nav>
-            <div class="col pc-10 row app-main">
-                <div class="col pc-9 app-on-use">
-                    <div class="app-on-use_banner">
-                        <div class="app-banner-info">
-                            <p>Playlist</p>
-                            <h2>Top Song <br> Of The Week</h2>
-                            <button id="btnPlay" type="submit">
-                                <i class="fa-solid fa-play"></i>Play
-                            </button>
-                            <button id="btnView" type="submit">
-                                View Playlist
-                            </button>
+            <div class="col pc-10">
+                <div class="row app-main">
+                    <div class="col pc-9 app-on-use">
+                        <div class="app-on-use_banner">
+                            <div class="app-banner-info">
+                                <p>Playlist</p>
+                                <h2>Top Song <br> Of The Week</h2>
+                                <button id="btnPlay" type="submit">
+                                    <i class="fa-solid fa-play"></i>Play
+                                </button>
+                                <button id="btnView" type="submit">
+                                    View Playlist
+                                </button>
+                            </div>
+                    
+                            <img class="app-banner-img" src="./asset/img/Content/TaylorSwift.png" alt="" width="45%">
                         </div>
-
-                        <img class="app-banner-img" src="./asset/img/Content/TaylorSwift.png" alt="" width="45%">
-                    </div>
-                    <div class="app-onuse_popular">
-                        <div class="popular-title">
-                            <h4>Popular</h4>
-                            <p>See All</p>
+                        <div class="app-onuse_popular">
+                            <div class="popular-title">
+                                <h4>Popular</h4>
+                                <p>See All</p>
+                            </div>
+                            <table class="popular-chart">
+                                <tr>
+                                    <th>#</th>
+                                    <th>TITLE</th>
+                                    <th>PLAYS</th>
+                                    <th><img src="./asset/img/svg/clock.svg" width="45%"></th>
+                                    <th>ALBUM</th>
+                                    <th></th>
+                                </tr>
+                                <tr>
+                                    <td class="popular-chart_no active">
+                                        <img src="./asset/img/svg/play-solid.svg" alt="">
+                                    </td>
+                                    <td class="popular-chart_title">
+                                        <img src="./asset/img/Content/album1.jfif" alt="" width="50px">
+                                        Wildest Dreams
+                                    </td>
+                                    <td class="popular-chart_plays">63,637,378</td>
+                                    <td class="popular-chart_time">3:40</td>
+                                    <td class="popular-chart_alb">1989</td>
+                                    <td>
+                                        <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="popular-chart_no">2</td>
+                                    <td class="popular-chart_title">
+                                        <img src="./asset/img/Content/album2.jfif" alt="" width="50px">
+                                        Wildest Dreams
+                                    </td>
+                                    <td class="popular-chart_plays">63,637,378</td>
+                                    <td class="popular-chart_time">3:40</td>
+                                    <td class="popular-chart_alb">1989</td>
+                                    <td>
+                                        <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="popular-chart_no">3</td>
+                                    <td class="popular-chart_title">
+                                        <img src="./asset/img/Content/album3.jfif" alt="" width="50px">
+                                        Wildest Dreams
+                                    </td>
+                                    <td class="popular-chart_plays">63,637,378</td>
+                                    <td class="popular-chart_time">3:40</td>
+                                    <td class="popular-chart_alb">1989</td>
+                                    <td>
+                                        <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="popular-chart_no">4</td>
+                                    <td class="popular-chart_title">
+                                        <img src="./asset/img/Content/album4.jfif" alt="" width="50px">
+                                        Wildest Dreams
+                                    </td>
+                                    <td class="popular-chart_plays">63,637,378</td>
+                                    <td class="popular-chart_time">3:40</td>
+                                    <td class="popular-chart_alb">1989</td>
+                                    <td>
+                                        <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
-                        <table class="popular-chart">
-                            <tr>
-                                <th>#</th>
-                                <th>TITLE</th>
-                                <th>PLAYING</th>
-                                <th>TIME</th>
-                                <th>ALBUM</th>
-                                <th></th>
-                            </tr>
-                            <tr>
-                                <td class="popular-chart_no active">
-                                    <img src="./asset/img/svg/play-solid.svg" alt="">
-                                </td>
-                                <td class="popular-chart_title">
-                                    <img src="./asset/img/svg/battle-net-brands.svg" alt="" width="50px">
-                                    Wildest Dreams
-                                </td>
-                                <td class="popular-chart_plays">63,637,378</td>
-                                <td class="popular-chart_time">3:40</td>
-                                <td class="popular-chart_alb">1989</td>
-                                <td>
-                                    <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="popular-chart_no">2</td>
-                                <td class="popular-chart_title">
-                                    <img src="./asset/img/svg/battle-net-brands.svg" alt="" width="50px">
-                                    Wildest Dreams
-                                </td>
-                                <td class="popular-chart_plays">63,637,378</td>
-                                <td class="popular-chart_time">3:40</td>
-                                <td class="popular-chart_alb">1989</td>
-                                <td>
-                                    <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="popular-chart_no">3</td>
-                                <td class="popular-chart_title">
-                                    <img src="./asset/img/svg/battle-net-brands.svg" alt="" width="50px">
-                                    Wildest Dreams
-                                </td>
-                                <td class="popular-chart_plays">63,637,378</td>
-                                <td class="popular-chart_time">3:40</td>
-                                <td class="popular-chart_alb">1989</td>
-                                <td>
-                                    <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="popular-chart_no">4</td>
-                                <td class="popular-chart_title">
-                                    <img src="./asset/img/svg/battle-net-brands.svg" alt="" width="50px">
-                                    Wildest Dreams
-                                </td>
-                                <td class="popular-chart_plays">63,637,378</td>
-                                <td class="popular-chart_time">3:40</td>
-                                <td class="popular-chart_alb">1989</td>
-                                <td>
-                                    <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
-                                </td>
-                            </tr>
-                        </table>
                     </div>
-                </div>
-                <div class="col pc-2 app-on-task">
-                    <div class="app-user">
-                        <div class="app-user-img">
-
+                    <div class="col pc-3 app-on-task">
+                        <div class="app-user">
+                            <img class="app-user-img" src="./asset/img/svg/user-02.svg" alt="" width="50">
+                            <div class="app-user-info">
+                                <p class="app-user_name">
+                                    Taylor Swift
+                                    <i class="fa-solid fa-angle-down"></i>
+                                </p>
+                                <p class="app-user_desc">
+                                    Member
+                                </p>
+                            </div>
+                            <div class="app-user-noti">
+                                <img src="./asset/img/svg/bell-solid.svg" alt="" width="15">
+                            </div>
+                        </div>
+                        <div class="app-recent">
+                            <div class="app-recent-playlist">
+                                <div class="app-recent-title">
+                                    <h3>Recently Played</h3>
+                                    <p>See All</p>
+                                </div>
+                                <table>
+                                    <tr>
+                                        <td class="popular-chart_title">
+                                            <img src="./asset/img/Content/album1.jfif" alt="" width="50px">
+                                            <div>
+                                                <p>Wildest Dreams</p>
+                                                <p>Taylor Swift</p>
+                                            </div>
+                                        </td>
+                                        <td class="popular-chart_time">3:40</td>
+                                        <td>
+                                            <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="popular-chart_title">
+                                            <img src="./asset/img/Content/album1.jfif" alt="" width="50px">
+                                            <div>
+                                                <p>Wildest Dreams</p>
+                                                <p>Taylor Swift</p>
+                                            </div>
+                                        </td>
+                                        <td class="popular-chart_time">3:40</td>
+                                        <td>
+                                            <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="popular-chart_title">
+                                            <img src="./asset/img/Content/album1.jfif" alt="" width="50px">
+                                            <div>
+                                                <p>Wildest Dreams</p>
+                                                <p>Taylor Swift</p>
+                                            </div>
+                                        </td>
+                                        <td class="popular-chart_time">3:40</td>
+                                        <td>
+                                            <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="popular-chart_title">
+                                            <img src="./asset/img/Content/album1.jfif" alt="" width="50px">
+                                            <div>
+                                                <p>Wildest Dreams</p>
+                                                <p>Taylor Swift</p>
+                                            </div>
+                                        </td>
+                                        <td class="popular-chart_time">3:40</td>
+                                        <td>
+                                            <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="popular-chart_title">
+                                            <img src="./asset/img/Content/album1.jfif" alt="" width="50px">
+                                            <div>
+                                                <p>Wildest Dreams</p>
+                                                <p>Taylor Swift</p>
+                                            </div>
+                                        </td>
+                                        <td class="popular-chart_time">3:40</td>
+                                        <td>
+                                            <img src="./asset/img/svg/ellipsis-vertical-solid.svg" alt="" width="4px">
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                            <div class="app-player">
+                                <img src="./asset/img/Content/album4.jfif" alt="">
+                                <h4>Wildest Dream</h4>
+                                <p>Taylor Swift</p>
+                                <div class="time-progress">
+                                    <div id="progress-container">
+                                        <input type="range" class="amplitude-song-slider" />
+                                        <progress id="song-played-progress" class="amplitude-song-played-progress"></progress>
+                                        <progress id="song-buffered-progress" class="amplitude-buffered-progress" value="0"></progress>
+                                    </div>
+                                
+                                    <div class="time-container">
+                                        <span class="current-time">
+                                            <span class="amplitude-current-minutes"></span>:<span class="amplitude-current-seconds"></span>
+                                        </span>
+                                        <span class="duration">
+                                            <span class="amplitude-duration-minutes"></span>:<span class="amplitude-duration-seconds"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="grid row">
+
         </div>
     </div>
 </body>
